<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0004_bg"
    tools:context=".PasswdActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/passwd_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/passwd_changepasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/passwd_changepasswd"
                android:textColor="@color/orange" >
            </TextView>

            <EditText
                android:id="@+id/passwd_passwdpast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwd_changepasswd"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/passwd_passwdpast"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:password="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passwd_passwdnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwd_passwdpast"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/passwd_passwdnew"
                android:paddingLeft="10dp"
                android:password="true" />

            <EditText
                android:id="@+id/passwd_passwdnew_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwd_passwdnew"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/passwd_passwdnew_submit"
                android:paddingLeft="10dp"
                android:password="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="40dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/common_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_gravity="center"
            android:src="@drawable/back_btn_selector" />

        <TextView
            android:id="@+id/common_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/confirm_selector"
            android:gravity="center"
            android:textSize="@dimen/text_middle"
            android:text="@string/passwd_confirm"
            android:textColor="@color/main_text" />
    </LinearLayout>

</RelativeLayout>