<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0004_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignTop="@+id/main_linear"
        android:layout_centerHorizontal="true"
        android:src="@drawable/_0000_logo" />

    <TextView
        android:id="@+id/main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mian_btn_selector"
        android:gravity="center"
        android:text="@string/main_start"
        android:textColor="@drawable/main_text_font_selector"
        android:textSize="@dimen/main_text" />

    <TextView
        android:id="@+id/main_izaoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mian_btn_selector"
        android:gravity="center"
        android:text="@string/main_izaoke"
        android:textColor="@drawable/main_text_font_selector"
        android:textSize="@dimen/main_text" />

    <TextView
        android:id="@+id/main_iqx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_izaoke"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mian_btn_selector"
        android:gravity="center"
        android:text="@string/main_iqx"
        android:textColor="@drawable/main_text_font_selector"
        android:textSize="@dimen/main_text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/zaoke" />

</RelativeLayout>