<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/_0004_bg" >

    <TextView
        android:id="@+id/recharge_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:id="@+id/recharge_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/recharge_bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="30dp" >

        <ImageView
            android:id="@+id/recharge_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:src="@drawable/back_btn_selector" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/recharge_back"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/recharge_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:background="@drawable/confirm"
                android:gravity="center"
                android:text="@string/recharge_submit"
                android:textColor="@color/recharge_white"
                android:textSize="@dimen/text_middle" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 此处是分割线 ,下面是关键，上面只是背景 -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp" >

        <LinearLayout
            android:id="@+id/izaoke_relative1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/izaoke_relative1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recharge_balance"
                        android:textColor="@color/recharge_gray" />

                    <TextView
                        android:id="@+id/recharge_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0元"
                        android:textColor="@color/recharge_orange"
                        android:textSize="25sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/recharge_divide" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7" >

                <TextView
                    android:id="@+id/recharge_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/recharge_num"
                    android:textColor="@color/recharge_orange" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recharge_num"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/recharge_20"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/recharge_selector"
                            android:gravity="center"
                            android:text="@string/recharge_20"
                            android:textColor="@color/recharge_orange" />

                        <TextView
                            android:id="@+id/recharge_30"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/recharge_selector"
                            android:gravity="center"
                            android:text="@string/recharge_30"
                            android:textColor="@color/recharge_orange" />

                        <TextView
                            android:id="@+id/recharge_50"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/recharge_selector"
                            android:gravity="center"
                            android:text="@string/recharge_50"
                            android:textColor="@color/recharge_orange" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/recharge_100"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/recharge_selector"
                            android:gravity="center"
                            android:text="@string/recharge_100"
                            android:textColor="@color/recharge_orange" />

                        <TextView
                            android:id="@+id/recharge_200"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/recharge_selector"
                            android:gravity="center"
                            android:text="@string/recharge_200"
                            android:textColor="@color/recharge_orange" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/recharge_divide" />
            </RelativeLayout>
        </LinearLayout>
        <!-- 此处是分割线 ,下面是支付方式，上面是金额等 -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/izaoke_relative2"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/recharge_mode"
                android:textColor="@color/recharge_orange" />

            <TextView
                android:id="@+id/recharge_alipay"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/recharge_selector"
                android:gravity="center"
                android:text="@string/recharge_alipay"
                android:textColor="@color/recharge_orange" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>