<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0004_bg"
    tools:context=".OrderSuccessActivity" >

    <LinearLayout
        android:id="@+id/order_linearlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shopingcart_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="178" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:src="@drawable/_0001_qx_padding" />

            <ImageView
                android:id="@+id/order_success_qx"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/_0000_qx" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="146"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/order_success_duigou"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:src="@drawable/ordersuccess_duigou" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/order_success_numberis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_success_number"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/order_success_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/order_success_waring"
                android:textColor="@color/orange"
                android:textSize="@dimen/order_success_size" />

            <LinearLayout
                android:id="@+id/order_success_remains_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="20dp" >

                <TextView
                    android:id="@+id/order_success_remains"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_success_remain" />

                <TextView
                    android:id="@+id/order_success_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/order_success_tomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:background="@drawable/common_back_btn_selector"
        android:gravity="center"
        android:text="@string/order_success_tomain"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_middle" />

    <TextView
        android:id="@+id/my_order_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@drawable/confirm_selector"
        android:gravity="center"
        android:text="@string/my_order_recharge"
        android:textColor="@color/main_text"
		android:textSize="@dimen/text_middle"/>

</RelativeLayout>